--- a/_/_css/_scss/_base/_variables.scss
+++ b/_/_css/_scss/_base/_variables.scss
@@ -1,13 +1,8 @@
 // ==========================================================================
 // GRID
 // ==========================================================================
-$rowWidth: 				74em;
-$columnGutter: 			4em;
+$rowWidth: 				120; 	// measurements in rem
+$columnGutter: 			4;		// measurements in rem
 $totalColumns: 			12;
 $defaultFloat: 			left;
 $oppositeDirection: 	right;
-
-
-// ==========================================================================
-// TYPOGRAPHY
-// ==========================================================================
