--- a/_/_css/style.css
+++ b/_/_css/style.css
@@ -114,11 +114,13 @@ samp {
 .row {
   width: 100%;
   margin: 0 auto;
-  max-width: 74em;
+  max-width: 1200px;
+  max-width: 120rem;
   *zoom: 1; }
   .row .row {
     width: auto;
-    margin: -2em;
+    margin: 0 -20px;
+    margin: 0 -2rem;
     max-width: none;
     *zoom: 1; }
   .row:after {
@@ -129,174 +131,175 @@ samp {
     height: 0; }
 
 .columns {
-  padding: 0 2em;
+  padding: 0 20px;
+  padding: 0 2rem;
   position: relative;
   float: left; }
   .columns:last-child {
     float: right; }
 
-.small-text-center {
+.large-text-center {
   text-align: center; }
 
-.small-text-left {
+.large-text-left {
   text-align: left; }
 
-.small-text-right {
+.large-text-right {
   text-align: right; }
 
-.columns.small-centered {
+.columns.large-centered {
   margin-left: auto;
   margin-right: auto;
   float: none; }
 
-.columns.small-uncentered {
+.columns.large-uncentered {
   margin-left: 0;
   margin-right: 0;
   float: left; }
-  .columns.small-uncentered.opposite {
+  .columns.large-uncentered.opposite {
     float: right; }
 
-.small-1 {
+.large-1 {
   width: 8.33333%; }
 
-.small-2 {
+.large-2 {
   width: 16.66667%; }
 
-.small-3 {
+.large-3 {
   width: 25%; }
 
-.small-4 {
+.large-4 {
   width: 33.33333%; }
 
-.small-5 {
+.large-5 {
   width: 41.66667%; }
 
-.small-6 {
+.large-6 {
   width: 50%; }
 
-.small-7 {
+.large-7 {
   width: 58.33333%; }
 
-.small-8 {
+.large-8 {
   width: 66.66667%; }
 
-.small-9 {
+.large-9 {
   width: 75%; }
 
-.small-10 {
+.large-10 {
   width: 83.33333%; }
 
-.small-11 {
+.large-11 {
   width: 91.66667%; }
 
-.small-12 {
+.large-12 {
   width: 100%; }
 
-.small-push0 {
+.large-push0 {
   left: 0%;
   right: auto; }
 
-.small-push-1 {
+.large-push-1 {
   left: 8.33333%;
   right: auto; }
 
-.small-push-2 {
+.large-push-2 {
   left: 16.66667%;
   right: auto; }
 
-.small-push-3 {
+.large-push-3 {
   left: 25%;
   right: auto; }
 
-.small-push-4 {
+.large-push-4 {
   left: 33.33333%;
   right: auto; }
 
-.small-push-5 {
+.large-push-5 {
   left: 41.66667%;
   right: auto; }
 
-.small-push-6 {
+.large-push-6 {
   left: 50%;
   right: auto; }
 
-.small-push-7 {
+.large-push-7 {
   left: 58.33333%;
   right: auto; }
 
-.small-push-8 {
+.large-push-8 {
   left: 66.66667%;
   right: auto; }
 
-.small-push-9 {
+.large-push-9 {
   left: 75%;
   right: auto; }
 
-.small-push-10 {
+.large-push-10 {
   left: 83.33333%;
   right: auto; }
 
-.small-push-11 {
+.large-push-11 {
   left: 91.66667%;
   right: auto; }
 
-.small-push-12 {
+.large-push-12 {
   left: 100%;
   right: auto; }
 
-.small-pull0 {
+.large-pull0 {
   right: 0%;
   left: auto; }
 
-.small-pull-1 {
+.large-pull-1 {
   right: 8.33333%;
   left: auto; }
 
-.small-pull-2 {
+.large-pull-2 {
   right: 16.66667%;
   left: auto; }
 
-.small-pull-3 {
+.large-pull-3 {
   right: 25%;
   left: auto; }
 
-.small-pull-4 {
+.large-pull-4 {
   right: 33.33333%;
   left: auto; }
 
-.small-pull-5 {
+.large-pull-5 {
   right: 41.66667%;
   left: auto; }
 
-.small-pull-6 {
+.large-pull-6 {
   right: 50%;
   left: auto; }
 
-.small-pull-7 {
+.large-pull-7 {
   right: 58.33333%;
   left: auto; }
 
-.small-pull-8 {
+.large-pull-8 {
   right: 66.66667%;
   left: auto; }
 
-.small-pull-9 {
+.large-pull-9 {
   right: 75%;
   left: auto; }
 
-.small-pull-10 {
+.large-pull-10 {
   right: 83.33333%;
   left: auto; }
 
-.small-pull-11 {
+.large-pull-11 {
   right: 91.66667%;
   left: auto; }
 
-.small-pull-12 {
+.large-pull-12 {
   right: 100%;
   left: auto; }
 
-@media only screen and (min-width: 30em) {
+@media only screen and (min-width: 48.001rem) and (max-width: 90rem) {
   .medium-text-center {
     text-align: center; }
 
@@ -457,164 +460,172 @@ samp {
   .medium-pull-12 {
     right: 100%;
     left: auto; } }
-@media only screen and (min-width: 60em) {
-  .large-text-center {
+@media only screen and (max-width: 30rem) {
+  .small-text-center {
     text-align: center; }
 
-  .large-text-left {
+  .small-text-left {
     text-align: left; }
 
-  .large-text-right {
+  .small-text-right {
     text-align: right; }
 
-  .columns.large-centered {
+  .columns.small-centered {
     margin-left: auto;
     margin-right: auto;
     float: none; }
 
-  .columns.large-uncentered {
+  .columns.small-uncentered {
     margin-left: 0;
     margin-right: 0;
     float: left; }
-    .columns.large-uncentered.opposite {
+    .columns.small-uncentered.opposite {
       float: right; }
 
-  .large-1 {
+  .small-1 {
     width: 8.33333%; }
 
-  .large-2 {
+  .small-2 {
     width: 16.66667%; }
 
-  .large-3 {
+  .small-3 {
     width: 25%; }
 
-  .large-4 {
+  .small-4 {
     width: 33.33333%; }
 
-  .large-5 {
+  .small-5 {
     width: 41.66667%; }
 
-  .large-6 {
+  .small-6 {
     width: 50%; }
 
-  .large-7 {
+  .small-7 {
     width: 58.33333%; }
 
-  .large-8 {
+  .small-8 {
     width: 66.66667%; }
 
-  .large-9 {
+  .small-9 {
     width: 75%; }
 
-  .large-10 {
+  .small-10 {
     width: 83.33333%; }
 
-  .large-11 {
+  .small-11 {
     width: 91.66667%; }
 
-  .large-12 {
+  .small-12 {
     width: 100%; }
 
-  .large-push0 {
+  .small-push0 {
     left: 0%;
     right: auto; }
 
-  .large-push-1 {
+  .small-push-1 {
     left: 8.33333%;
     right: auto; }
 
-  .large-push-2 {
+  .small-push-2 {
     left: 16.66667%;
     right: auto; }
 
-  .large-push-3 {
+  .small-push-3 {
     left: 25%;
     right: auto; }
 
-  .large-push-4 {
+  .small-push-4 {
     left: 33.33333%;
     right: auto; }
 
-  .large-push-5 {
+  .small-push-5 {
     left: 41.66667%;
     right: auto; }
 
-  .large-push-6 {
+  .small-push-6 {
     left: 50%;
     right: auto; }
 
-  .large-push-7 {
+  .small-push-7 {
     left: 58.33333%;
     right: auto; }
 
-  .large-push-8 {
+  .small-push-8 {
     left: 66.66667%;
     right: auto; }
 
-  .large-push-9 {
+  .small-push-9 {
     left: 75%;
     right: auto; }
 
-  .large-push-10 {
+  .small-push-10 {
     left: 83.33333%;
     right: auto; }
 
-  .large-push-11 {
+  .small-push-11 {
     left: 91.66667%;
     right: auto; }
 
-  .large-push-12 {
+  .small-push-12 {
     left: 100%;
     right: auto; }
 
-  .large-pull0 {
+  .small-pull0 {
     right: 0%;
     left: auto; }
 
-  .large-pull-1 {
+  .small-pull-1 {
     right: 8.33333%;
     left: auto; }
 
-  .large-pull-2 {
+  .small-pull-2 {
     right: 16.66667%;
     left: auto; }
 
-  .large-pull-3 {
+  .small-pull-3 {
     right: 25%;
     left: auto; }
 
-  .large-pull-4 {
+  .small-pull-4 {
     right: 33.33333%;
     left: auto; }
 
-  .large-pull-5 {
+  .small-pull-5 {
     right: 41.66667%;
     left: auto; }
 
-  .large-pull-6 {
+  .small-pull-6 {
     right: 50%;
     left: auto; }
 
-  .large-pull-7 {
+  .small-pull-7 {
     right: 58.33333%;
     left: auto; }
 
-  .large-pull-8 {
+  .small-pull-8 {
     right: 66.66667%;
     left: auto; }
 
-  .large-pull-9 {
+  .small-pull-9 {
     right: 75%;
     left: auto; }
 
-  .large-pull-10 {
+  .small-pull-10 {
     right: 83.33333%;
     left: auto; }
 
-  .large-pull-11 {
+  .small-pull-11 {
     right: 91.66667%;
     left: auto; }
 
-  .large-pull-12 {
+  .small-pull-12 {
     right: 100%;
     left: auto; } }
+h1, .alpha {
+  font-size: 16px;
+  font-size: 1.6rem;
+  margin: 10px 20px 30px 40px;
+  margin: 1rem 2rem 3rem 4rem;
+  padding: 20px 30px;
+  padding: 2rem 3rem;
+  @inlclude property(transition, all, linear, 0.3s); }
