--- a/_/_css/style.css
+++ b/_/_css/style.css
@@ -624,8 +624,5 @@ samp {
 h1, .alpha {
   font-size: 16px;
   font-size: 1.6rem;
-  margin: 10px 20px 30px 40px;
-  margin: 1rem 2rem 3rem 4rem;
-  padding: 20px 30px;
-  padding: 2rem 3rem;
-  @inlclude property(transition, all, linear, 0.3s); }
+  margin: 10px 10px 30px 40px;
+  margin: 1rem 1rem 3rem 4rem; }
