--- a/_/_css/_scss/_base/_variables.scss
+++ b/_/_css/_scss/_base/_variables.scss
@@ -1,8 +1,8 @@
 // ==========================================================================
 // GRID
 // ==========================================================================
-$rowWidth: 				120; 	// measurements in rem
-$columnGutter: 			4;		// measurements in rem
+$rowWidth: 				1200; 	// measurements in px
+$columnGutter: 			40;		// measurements in px
 $totalColumns: 			12;
 $defaultFloat: 			left;
 $oppositeDirection: 	right;
