--- a/_/_css/_scss/_regions/_homepage.scss
+++ b/_/_css/_scss/_regions/_homepage.scss
@@ -1,11 +1,3 @@
-.test {
-	display: block;
-	background: #ccc;
-	width: 100px;
-	height: 100px;
-
-	@include borderRadius(false, 20, 40, 20, 10);
-	@include transition(color 0.2s ease, background 0.2s ease);
-
-	@include prefix(box-shadow, 0px 10px 4px #000)
+section {
+	@include backgroundImage(test, png, top center no-repeat);
 }
