--- a/_/_css/_scss/style.scss
+++ b/_/_css/_scss/style.scss
@@ -2,6 +2,7 @@
 // ---------------------------------------------------------
 @import "_base/_variables.scss";
 @import "_base/_mixins.scss";
+@import "_base/_placeholders.scss";
 @import "_base/_reset.scss";
 @import "_base/_grid.scss";
 @import "_base/_typography.scss";
