--- a/_/_css/_scss/_base/_reset.scss
+++ b/_/_css/_scss/_base/_reset.scss
@@ -76,6 +76,7 @@ audio:not([controls]) {
 
 a {
     background: transparent;
+    text-decoration: none;
 
     &:hover {
         cursor: pointer;
@@ -121,7 +122,7 @@ table {
 
     td,
     th {
-      padding: 0;
+        padding: 0;
     }
 }
 
@@ -134,5 +135,5 @@ kbd,
 pre,
 samp {
     font-family: monospace, monospace;
-    font-size: 1em;
+    @include fontsize(14);
 }
