--- a/_/_css/_scss/_base/_variables.scss
+++ b/_/_css/_scss/_base/_variables.scss
@@ -1,8 +1,27 @@
-// ==========================================================================
-// GRID
-// ==========================================================================
-$rowWidth: 				1200; 	// measurements in px
-$columnGutter: 			40;		// measurements in px
+//----------------------------------------------------------------
+//	Internet Explorer 8 / Opera Mini Support
+//----------------------------------------------------------------
+// Change to "true" if you wish to support IE8 and Opera Mini.
+$pxSupport: 			"false";  
+
+
+//----------------------------------------------------------------
+//	Grid
+//----------------------------------------------------------------
+// * Values are in pixels for the sake of ease, but everything will 
+//   output in rem's. There will be pixel values added too, as a 
+//   fallback if $pxSupport is set to 'true'.
+$rowWidth: 				1200; 	// * 
+$columnGutter: 			40;		// *
 $totalColumns: 			12;
 $defaultFloat: 			left;
 $oppositeDirection: 	right;
+$smallscreen: 			480;	// Cut off point for 'small' breakpoint
+$mediumscreen: 			900;	// Cut off point for 'medium' breakpoint
+
+
+//----------------------------------------------------------------
+//	Colors
+//----------------------------------------------------------------
+$titleColor: 			#333;
+$bodyColor: 			#777;
