--- a/_/_css/style.css
+++ b/_/_css/style.css
@@ -66,7 +66,8 @@ audio:not([controls]) {
   display: none; }
 
 a {
-  background: transparent; }
+  background: transparent;
+  text-decoration: none; }
   a:hover {
     cursor: pointer; }
   a:active, a:hover {
@@ -109,7 +110,7 @@ kbd,
 pre,
 samp {
   font-family: monospace, monospace;
-  font-size: 1em; }
+  font-size: 1.4rem; }
 
 .row {
   width: 100%;
@@ -138,329 +139,29 @@ samp {
   .columns:last-child {
     float: right; }
 
-.large-text-center {
-  text-align: center; }
-
-.large-text-left {
-  text-align: left; }
-
-.large-text-right {
-  text-align: right; }
-
-.columns.large-centered {
-  margin-left: auto;
-  margin-right: auto;
-  float: none; }
-
-.columns.large-uncentered {
-  margin-left: 0;
-  margin-right: 0;
-  float: left; }
-  .columns.large-uncentered.opposite {
-    float: right; }
-
-.large-1 {
-  width: 8.33333%; }
-
-.large-2 {
-  width: 16.66667%; }
-
-.large-3 {
-  width: 25%; }
-
-.large-4 {
-  width: 33.33333%; }
-
-.large-5 {
-  width: 41.66667%; }
-
-.large-6 {
-  width: 50%; }
-
-.large-7 {
-  width: 58.33333%; }
-
-.large-8 {
-  width: 66.66667%; }
-
-.large-9 {
-  width: 75%; }
-
-.large-10 {
-  width: 83.33333%; }
-
-.large-11 {
-  width: 91.66667%; }
-
-.large-12 {
-  width: 100%; }
-
-.large-push0 {
-  left: 0%;
-  right: auto; }
-
-.large-push-1 {
-  left: 8.33333%;
-  right: auto; }
-
-.large-push-2 {
-  left: 16.66667%;
-  right: auto; }
-
-.large-push-3 {
-  left: 25%;
-  right: auto; }
-
-.large-push-4 {
-  left: 33.33333%;
-  right: auto; }
-
-.large-push-5 {
-  left: 41.66667%;
-  right: auto; }
-
-.large-push-6 {
-  left: 50%;
-  right: auto; }
-
-.large-push-7 {
-  left: 58.33333%;
-  right: auto; }
-
-.large-push-8 {
-  left: 66.66667%;
-  right: auto; }
-
-.large-push-9 {
-  left: 75%;
-  right: auto; }
-
-.large-push-10 {
-  left: 83.33333%;
-  right: auto; }
-
-.large-push-11 {
-  left: 91.66667%;
-  right: auto; }
-
-.large-push-12 {
-  left: 100%;
-  right: auto; }
-
-.large-pull0 {
-  right: 0%;
-  left: auto; }
-
-.large-pull-1 {
-  right: 8.33333%;
-  left: auto; }
-
-.large-pull-2 {
-  right: 16.66667%;
-  left: auto; }
-
-.large-pull-3 {
-  right: 25%;
-  left: auto; }
-
-.large-pull-4 {
-  right: 33.33333%;
-  left: auto; }
-
-.large-pull-5 {
-  right: 41.66667%;
-  left: auto; }
-
-.large-pull-6 {
-  right: 50%;
-  left: auto; }
-
-.large-pull-7 {
-  right: 58.33333%;
-  left: auto; }
-
-.large-pull-8 {
-  right: 66.66667%;
-  left: auto; }
-
-.large-pull-9 {
-  right: 75%;
-  left: auto; }
-
-.large-pull-10 {
-  right: 83.33333%;
-  left: auto; }
-
-.large-pull-11 {
-  right: 91.66667%;
-  left: auto; }
-
-.large-pull-12 {
-  right: 100%;
-  left: auto; }
-
-@media only screen and (min-width: 48.001rem) and (max-width: 90rem) {
-  .medium-text-center {
-    text-align: center; }
-
-  .medium-text-left {
-    text-align: left; }
-
-  .medium-text-right {
-    text-align: right; }
-
-  .columns.medium-centered {
-    margin-left: auto;
-    margin-right: auto;
-    float: none; }
-
-  .columns.medium-uncentered {
-    margin-left: 0;
-    margin-right: 0;
-    float: left; }
-    .columns.medium-uncentered.opposite {
-      float: right; }
-
-  .medium-1 {
-    width: 8.33333%; }
-
-  .medium-2 {
-    width: 16.66667%; }
-
-  .medium-3 {
-    width: 25%; }
-
-  .medium-4 {
-    width: 33.33333%; }
-
-  .medium-5 {
-    width: 41.66667%; }
-
-  .medium-6 {
-    width: 50%; }
-
-  .medium-7 {
-    width: 58.33333%; }
-
-  .medium-8 {
-    width: 66.66667%; }
-
-  .medium-9 {
-    width: 75%; }
-
-  .medium-10 {
-    width: 83.33333%; }
-
-  .medium-11 {
-    width: 91.66667%; }
-
-  .medium-12 {
-    width: 100%; }
-
-  .medium-push0 {
-    left: 0%;
-    right: auto; }
-
-  .medium-push-1 {
-    left: 8.33333%;
-    right: auto; }
-
-  .medium-push-2 {
-    left: 16.66667%;
-    right: auto; }
-
-  .medium-push-3 {
-    left: 25%;
-    right: auto; }
-
-  .medium-push-4 {
-    left: 33.33333%;
-    right: auto; }
-
-  .medium-push-5 {
-    left: 41.66667%;
-    right: auto; }
-
-  .medium-push-6 {
-    left: 50%;
-    right: auto; }
-
-  .medium-push-7 {
-    left: 58.33333%;
-    right: auto; }
-
-  .medium-push-8 {
-    left: 66.66667%;
-    right: auto; }
-
-  .medium-push-9 {
-    left: 75%;
-    right: auto; }
-
-  .medium-push-10 {
-    left: 83.33333%;
-    right: auto; }
-
-  .medium-push-11 {
-    left: 91.66667%;
-    right: auto; }
-
-  .medium-push-12 {
-    left: 100%;
-    right: auto; }
-
-  .medium-pull0 {
-    right: 0%;
-    left: auto; }
-
-  .medium-pull-1 {
-    right: 8.33333%;
-    left: auto; }
-
-  .medium-pull-2 {
-    right: 16.66667%;
-    left: auto; }
-
-  .medium-pull-3 {
-    right: 25%;
-    left: auto; }
-
-  .medium-pull-4 {
-    right: 33.33333%;
-    left: auto; }
-
-  .medium-pull-5 {
-    right: 41.66667%;
-    left: auto; }
-
-  .medium-pull-6 {
-    right: 50%;
-    left: auto; }
-
-  .medium-pull-7 {
-    right: 58.33333%;
-    left: auto; }
-
-  .medium-pull-8 {
-    right: 66.66667%;
-    left: auto; }
-
-  .medium-pull-9 {
-    right: 75%;
-    left: auto; }
-
-  .medium-pull-10 {
-    right: 83.33333%;
-    left: auto; }
-
-  .medium-pull-11 {
-    right: 91.66667%;
-    left: auto; }
-
-  .medium-pull-12 {
-    right: 100%;
-    left: auto; } }
-@media only screen and (max-width: 30rem) {
+[class*="block-grid-"] {
+  display: block;
+  padding: 0;
+  margin: 0 -20px;
+  margin: 0 -2rem;
+  *zoom: 1; }
+
+[class*="block-grid-"]:before,
+[class*="block-grid-"]:after {
+  content: " ";
+  display: table; }
+
+[class*="block-grid-"]:after {
+  clear: both; }
+
+[class*="block-grid-"] > li {
+  display: block;
+  height: auto;
+  float: left;
+  padding: 0 20px;
+  padding: 0 2rem; }
+
+@media only screen {
   .small-text-center {
     text-align: center; }
 
@@ -518,10 +219,6 @@ samp {
   .small-12 {
     width: 100%; }
 
-  .small-push0 {
-    left: 0%;
-    right: auto; }
-
   .small-push-1 {
     left: 8.33333%;
     right: auto; }
@@ -570,10 +267,6 @@ samp {
     left: 100%;
     right: auto; }
 
-  .small-pull0 {
-    right: 0%;
-    left: auto; }
-
   .small-pull-1 {
     right: 8.33333%;
     left: auto; }
@@ -620,6 +313,644 @@ samp {
 
   .small-pull-12 {
     right: 100%;
-    left: auto; } }
-section {
-  background: url(/_/_images/test.png) top center no-repeat; }
+    left: auto; }
+
+  .small-block-grid-1 {
+    width: 100%; }
+
+  .small-block-grid-1 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-1 > li:nth-of-type(1n+1) {
+    clear: both; }
+
+  .small-block-grid-2 {
+    width: 50%; }
+
+  .small-block-grid-2 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-2 > li:nth-of-type(2n+1) {
+    clear: both; }
+
+  .small-block-grid-3 {
+    width: 33.33333%; }
+
+  .small-block-grid-3 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-3 > li:nth-of-type(3n+1) {
+    clear: both; }
+
+  .small-block-grid-4 {
+    width: 25%; }
+
+  .small-block-grid-4 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-4 > li:nth-of-type(4n+1) {
+    clear: both; }
+
+  .small-block-grid-5 {
+    width: 20%; }
+
+  .small-block-grid-5 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-5 > li:nth-of-type(5n+1) {
+    clear: both; }
+
+  .small-block-grid-6 {
+    width: 16.66667%; }
+
+  .small-block-grid-6 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-6 > li:nth-of-type(6n+1) {
+    clear: both; }
+
+  .small-block-grid-7 {
+    width: 14.28571%; }
+
+  .small-block-grid-7 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-7 > li:nth-of-type(7n+1) {
+    clear: both; }
+
+  .small-block-grid-8 {
+    width: 12.5%; }
+
+  .small-block-grid-8 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-8 > li:nth-of-type(8n+1) {
+    clear: both; }
+
+  .small-block-grid-9 {
+    width: 11.11111%; }
+
+  .small-block-grid-9 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-9 > li:nth-of-type(9n+1) {
+    clear: both; }
+
+  .small-block-grid-10 {
+    width: 10%; }
+
+  .small-block-grid-10 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-10 > li:nth-of-type(10n+1) {
+    clear: both; }
+
+  .small-block-grid-11 {
+    width: 9.09091%; }
+
+  .small-block-grid-11 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-11 > li:nth-of-type(11n+1) {
+    clear: both; }
+
+  .small-block-grid-12 {
+    width: 8.33333%; }
+
+  .small-block-grid-12 > li:nth-of-type(n) {
+    clear: none; }
+
+  .small-block-grid-12 > li:nth-of-type(12n+1) {
+    clear: both; } }
+@media only screen and (min-width: 48.1rem) {
+  .medium-text-center {
+    text-align: center; }
+
+  .medium-text-left {
+    text-align: left; }
+
+  .medium-text-right {
+    text-align: right; }
+
+  .columns.medium-centered {
+    margin-left: auto;
+    margin-right: auto;
+    float: none; }
+
+  .columns.medium-uncentered {
+    margin-left: 0;
+    margin-right: 0;
+    float: left; }
+    .columns.medium-uncentered.opposite {
+      float: right; }
+
+  .medium-1 {
+    width: 8.33333%; }
+
+  .medium-2 {
+    width: 16.66667%; }
+
+  .medium-3 {
+    width: 25%; }
+
+  .medium-4 {
+    width: 33.33333%; }
+
+  .medium-5 {
+    width: 41.66667%; }
+
+  .medium-6 {
+    width: 50%; }
+
+  .medium-7 {
+    width: 58.33333%; }
+
+  .medium-8 {
+    width: 66.66667%; }
+
+  .medium-9 {
+    width: 75%; }
+
+  .medium-10 {
+    width: 83.33333%; }
+
+  .medium-11 {
+    width: 91.66667%; }
+
+  .medium-12 {
+    width: 100%; }
+
+  .medium-push-1 {
+    left: 8.33333%;
+    right: auto; }
+
+  .medium-push-2 {
+    left: 16.66667%;
+    right: auto; }
+
+  .medium-push-3 {
+    left: 25%;
+    right: auto; }
+
+  .medium-push-4 {
+    left: 33.33333%;
+    right: auto; }
+
+  .medium-push-5 {
+    left: 41.66667%;
+    right: auto; }
+
+  .medium-push-6 {
+    left: 50%;
+    right: auto; }
+
+  .medium-push-7 {
+    left: 58.33333%;
+    right: auto; }
+
+  .medium-push-8 {
+    left: 66.66667%;
+    right: auto; }
+
+  .medium-push-9 {
+    left: 75%;
+    right: auto; }
+
+  .medium-push-10 {
+    left: 83.33333%;
+    right: auto; }
+
+  .medium-push-11 {
+    left: 91.66667%;
+    right: auto; }
+
+  .medium-push-12 {
+    left: 100%;
+    right: auto; }
+
+  .medium-pull-1 {
+    right: 8.33333%;
+    left: auto; }
+
+  .medium-pull-2 {
+    right: 16.66667%;
+    left: auto; }
+
+  .medium-pull-3 {
+    right: 25%;
+    left: auto; }
+
+  .medium-pull-4 {
+    right: 33.33333%;
+    left: auto; }
+
+  .medium-pull-5 {
+    right: 41.66667%;
+    left: auto; }
+
+  .medium-pull-6 {
+    right: 50%;
+    left: auto; }
+
+  .medium-pull-7 {
+    right: 58.33333%;
+    left: auto; }
+
+  .medium-pull-8 {
+    right: 66.66667%;
+    left: auto; }
+
+  .medium-pull-9 {
+    right: 75%;
+    left: auto; }
+
+  .medium-pull-10 {
+    right: 83.33333%;
+    left: auto; }
+
+  .medium-pull-11 {
+    right: 91.66667%;
+    left: auto; }
+
+  .medium-pull-12 {
+    right: 100%;
+    left: auto; }
+
+  .medium-block-grid-1 {
+    width: 100%; }
+
+  .medium-block-grid-1 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-1 > li:nth-of-type(1n+1) {
+    clear: both; }
+
+  .medium-block-grid-2 {
+    width: 50%; }
+
+  .medium-block-grid-2 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-2 > li:nth-of-type(2n+1) {
+    clear: both; }
+
+  .medium-block-grid-3 {
+    width: 33.33333%; }
+
+  .medium-block-grid-3 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-3 > li:nth-of-type(3n+1) {
+    clear: both; }
+
+  .medium-block-grid-4 {
+    width: 25%; }
+
+  .medium-block-grid-4 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-4 > li:nth-of-type(4n+1) {
+    clear: both; }
+
+  .medium-block-grid-5 {
+    width: 20%; }
+
+  .medium-block-grid-5 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-5 > li:nth-of-type(5n+1) {
+    clear: both; }
+
+  .medium-block-grid-6 {
+    width: 16.66667%; }
+
+  .medium-block-grid-6 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-6 > li:nth-of-type(6n+1) {
+    clear: both; }
+
+  .medium-block-grid-7 {
+    width: 14.28571%; }
+
+  .medium-block-grid-7 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-7 > li:nth-of-type(7n+1) {
+    clear: both; }
+
+  .medium-block-grid-8 {
+    width: 12.5%; }
+
+  .medium-block-grid-8 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-8 > li:nth-of-type(8n+1) {
+    clear: both; }
+
+  .medium-block-grid-9 {
+    width: 11.11111%; }
+
+  .medium-block-grid-9 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-9 > li:nth-of-type(9n+1) {
+    clear: both; }
+
+  .medium-block-grid-10 {
+    width: 10%; }
+
+  .medium-block-grid-10 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-10 > li:nth-of-type(10n+1) {
+    clear: both; }
+
+  .medium-block-grid-11 {
+    width: 9.09091%; }
+
+  .medium-block-grid-11 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-11 > li:nth-of-type(11n+1) {
+    clear: both; }
+
+  .medium-block-grid-12 {
+    width: 8.33333%; }
+
+  .medium-block-grid-12 > li:nth-of-type(n) {
+    clear: none; }
+
+  .medium-block-grid-12 > li:nth-of-type(12n+1) {
+    clear: both; } }
+@media only screen and (min-width: 90.1rem) {
+  .large-text-center {
+    text-align: center; }
+
+  .large-text-left {
+    text-align: left; }
+
+  .large-text-right {
+    text-align: right; }
+
+  .columns.large-centered {
+    margin-left: auto;
+    margin-right: auto;
+    float: none; }
+
+  .columns.large-uncentered {
+    margin-left: 0;
+    margin-right: 0;
+    float: left; }
+    .columns.large-uncentered.opposite {
+      float: right; }
+
+  .large-1 {
+    width: 8.33333%; }
+
+  .large-2 {
+    width: 16.66667%; }
+
+  .large-3 {
+    width: 25%; }
+
+  .large-4 {
+    width: 33.33333%; }
+
+  .large-5 {
+    width: 41.66667%; }
+
+  .large-6 {
+    width: 50%; }
+
+  .large-7 {
+    width: 58.33333%; }
+
+  .large-8 {
+    width: 66.66667%; }
+
+  .large-9 {
+    width: 75%; }
+
+  .large-10 {
+    width: 83.33333%; }
+
+  .large-11 {
+    width: 91.66667%; }
+
+  .large-12 {
+    width: 100%; }
+
+  .large-push-1 {
+    left: 8.33333%;
+    right: auto; }
+
+  .large-push-2 {
+    left: 16.66667%;
+    right: auto; }
+
+  .large-push-3 {
+    left: 25%;
+    right: auto; }
+
+  .large-push-4 {
+    left: 33.33333%;
+    right: auto; }
+
+  .large-push-5 {
+    left: 41.66667%;
+    right: auto; }
+
+  .large-push-6 {
+    left: 50%;
+    right: auto; }
+
+  .large-push-7 {
+    left: 58.33333%;
+    right: auto; }
+
+  .large-push-8 {
+    left: 66.66667%;
+    right: auto; }
+
+  .large-push-9 {
+    left: 75%;
+    right: auto; }
+
+  .large-push-10 {
+    left: 83.33333%;
+    right: auto; }
+
+  .large-push-11 {
+    left: 91.66667%;
+    right: auto; }
+
+  .large-push-12 {
+    left: 100%;
+    right: auto; }
+
+  .large-pull-1 {
+    right: 8.33333%;
+    left: auto; }
+
+  .large-pull-2 {
+    right: 16.66667%;
+    left: auto; }
+
+  .large-pull-3 {
+    right: 25%;
+    left: auto; }
+
+  .large-pull-4 {
+    right: 33.33333%;
+    left: auto; }
+
+  .large-pull-5 {
+    right: 41.66667%;
+    left: auto; }
+
+  .large-pull-6 {
+    right: 50%;
+    left: auto; }
+
+  .large-pull-7 {
+    right: 58.33333%;
+    left: auto; }
+
+  .large-pull-8 {
+    right: 66.66667%;
+    left: auto; }
+
+  .large-pull-9 {
+    right: 75%;
+    left: auto; }
+
+  .large-pull-10 {
+    right: 83.33333%;
+    left: auto; }
+
+  .large-pull-11 {
+    right: 91.66667%;
+    left: auto; }
+
+  .large-pull-12 {
+    right: 100%;
+    left: auto; }
+
+  .large-block-grid-1 > li {
+    width: 100%; }
+
+  .large-block-grid-1 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-1 > li:nth-of-type(1n+1) {
+    clear: both; }
+
+  .large-block-grid-2 > li {
+    width: 50%; }
+
+  .large-block-grid-2 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-2 > li:nth-of-type(2n+1) {
+    clear: both; }
+
+  .large-block-grid-3 > li {
+    width: 33.33333%; }
+
+  .large-block-grid-3 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-3 > li:nth-of-type(3n+1) {
+    clear: both; }
+
+  .large-block-grid-4 > li {
+    width: 25%; }
+
+  .large-block-grid-4 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-4 > li:nth-of-type(4n+1) {
+    clear: both; }
+
+  .large-block-grid-5 > li {
+    width: 20%; }
+
+  .large-block-grid-5 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-5 > li:nth-of-type(5n+1) {
+    clear: both; }
+
+  .large-block-grid-6 > li {
+    width: 16.66667%; }
+
+  .large-block-grid-6 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-6 > li:nth-of-type(6n+1) {
+    clear: both; }
+
+  .large-block-grid-7 > li {
+    width: 14.28571%; }
+
+  .large-block-grid-7 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-7 > li:nth-of-type(7n+1) {
+    clear: both; }
+
+  .large-block-grid-8 > li {
+    width: 12.5%; }
+
+  .large-block-grid-8 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-8 > li:nth-of-type(8n+1) {
+    clear: both; }
+
+  .large-block-grid-9 > li {
+    width: 11.11111%; }
+
+  .large-block-grid-9 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-9 > li:nth-of-type(9n+1) {
+    clear: both; }
+
+  .large-block-grid-10 > li {
+    width: 10%; }
+
+  .large-block-grid-10 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-10 > li:nth-of-type(10n+1) {
+    clear: both; }
+
+  .large-block-grid-11 > li {
+    width: 9.09091%; }
+
+  .large-block-grid-11 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-11 > li:nth-of-type(11n+1) {
+    clear: both; }
+
+  .large-block-grid-12 > li {
+    width: 8.33333%; }
+
+  .large-block-grid-12 > li:nth-of-type(n) {
+    clear: none; }
+
+  .large-block-grid-12 > li:nth-of-type(12n+1) {
+    clear: both; } }
+h1, h2, h3, h4, h5, h6,
+.alpha, .beta, .gamma, .delta, .epsilon, .zeta {
+  color: #333333; }
+
+p,
+li {
+  color: #777777; }
+
+h1 {
+  font-size: 4rem; }
