--- a/_/_css/style.css
+++ b/_/_css/style.css
@@ -161,7 +161,268 @@ samp {
   padding: 0 20px;
   padding: 0 2rem; }
 
-@media only screen {
+@media only screen and (min-width: 0rem) {
+  .xsmall-text-center {
+    text-align: center; }
+
+  .xsmall-text-left {
+    text-align: left; }
+
+  .xsmall-text-right {
+    text-align: right; }
+
+  .columns.xsmall-centered {
+    margin-left: auto;
+    margin-right: auto;
+    float: none; }
+
+  .columns.xsmall-uncentered {
+    margin-left: 0;
+    margin-right: 0;
+    float: left; }
+    .columns.xsmall-uncentered.opposite {
+      float: right; }
+
+  .xsmall-1 {
+    width: 8.33333%; }
+
+  .xsmall-2 {
+    width: 16.66667%; }
+
+  .xsmall-3 {
+    width: 25%; }
+
+  .xsmall-4 {
+    width: 33.33333%; }
+
+  .xsmall-5 {
+    width: 41.66667%; }
+
+  .xsmall-6 {
+    width: 50%; }
+
+  .xsmall-7 {
+    width: 58.33333%; }
+
+  .xsmall-8 {
+    width: 66.66667%; }
+
+  .xsmall-9 {
+    width: 75%; }
+
+  .xsmall-10 {
+    width: 83.33333%; }
+
+  .xsmall-11 {
+    width: 91.66667%; }
+
+  .xsmall-12 {
+    width: 100%; }
+
+  .xsmall-push-1 {
+    left: 8.33333%;
+    right: auto; }
+
+  .xsmall-push-2 {
+    left: 16.66667%;
+    right: auto; }
+
+  .xsmall-push-3 {
+    left: 25%;
+    right: auto; }
+
+  .xsmall-push-4 {
+    left: 33.33333%;
+    right: auto; }
+
+  .xsmall-push-5 {
+    left: 41.66667%;
+    right: auto; }
+
+  .xsmall-push-6 {
+    left: 50%;
+    right: auto; }
+
+  .xsmall-push-7 {
+    left: 58.33333%;
+    right: auto; }
+
+  .xsmall-push-8 {
+    left: 66.66667%;
+    right: auto; }
+
+  .xsmall-push-9 {
+    left: 75%;
+    right: auto; }
+
+  .xsmall-push-10 {
+    left: 83.33333%;
+    right: auto; }
+
+  .xsmall-push-11 {
+    left: 91.66667%;
+    right: auto; }
+
+  .xsmall-push-12 {
+    left: 100%;
+    right: auto; }
+
+  .xsmall-pull-1 {
+    right: 8.33333%;
+    left: auto; }
+
+  .xsmall-pull-2 {
+    right: 16.66667%;
+    left: auto; }
+
+  .xsmall-pull-3 {
+    right: 25%;
+    left: auto; }
+
+  .xsmall-pull-4 {
+    right: 33.33333%;
+    left: auto; }
+
+  .xsmall-pull-5 {
+    right: 41.66667%;
+    left: auto; }
+
+  .xsmall-pull-6 {
+    right: 50%;
+    left: auto; }
+
+  .xsmall-pull-7 {
+    right: 58.33333%;
+    left: auto; }
+
+  .xsmall-pull-8 {
+    right: 66.66667%;
+    left: auto; }
+
+  .xsmall-pull-9 {
+    right: 75%;
+    left: auto; }
+
+  .xsmall-pull-10 {
+    right: 83.33333%;
+    left: auto; }
+
+  .xsmall-pull-11 {
+    right: 91.66667%;
+    left: auto; }
+
+  .xsmall-pull-12 {
+    right: 100%;
+    left: auto; }
+
+  .xsmall-block-grid-1 {
+    width: 100%; }
+
+  .xsmall-block-grid-1 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-1 > li:nth-of-type(1n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-2 {
+    width: 50%; }
+
+  .xsmall-block-grid-2 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-2 > li:nth-of-type(2n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-3 {
+    width: 33.33333%; }
+
+  .xsmall-block-grid-3 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-3 > li:nth-of-type(3n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-4 {
+    width: 25%; }
+
+  .xsmall-block-grid-4 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-4 > li:nth-of-type(4n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-5 {
+    width: 20%; }
+
+  .xsmall-block-grid-5 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-5 > li:nth-of-type(5n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-6 {
+    width: 16.66667%; }
+
+  .xsmall-block-grid-6 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-6 > li:nth-of-type(6n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-7 {
+    width: 14.28571%; }
+
+  .xsmall-block-grid-7 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-7 > li:nth-of-type(7n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-8 {
+    width: 12.5%; }
+
+  .xsmall-block-grid-8 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-8 > li:nth-of-type(8n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-9 {
+    width: 11.11111%; }
+
+  .xsmall-block-grid-9 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-9 > li:nth-of-type(9n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-10 {
+    width: 10%; }
+
+  .xsmall-block-grid-10 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-10 > li:nth-of-type(10n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-11 {
+    width: 9.09091%; }
+
+  .xsmall-block-grid-11 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-11 > li:nth-of-type(11n+1) {
+    clear: both; }
+
+  .xsmall-block-grid-12 {
+    width: 8.33333%; }
+
+  .xsmall-block-grid-12 > li:nth-of-type(n) {
+    clear: none; }
+
+  .xsmall-block-grid-12 > li:nth-of-type(12n+1) {
+    clear: both; } }
+@media only screen and (min-width: 30rem) {
   .small-text-center {
     text-align: center; }
 
@@ -837,7 +1098,7 @@ samp {
     right: 100%;
     left: auto; }
 
-  .large-block-grid-1 > li {
+  .large-block-grid-1 {
     width: 100%; }
 
   .large-block-grid-1 > li:nth-of-type(n) {
@@ -846,7 +1107,7 @@ samp {
   .large-block-grid-1 > li:nth-of-type(1n+1) {
     clear: both; }
 
-  .large-block-grid-2 > li {
+  .large-block-grid-2 {
     width: 50%; }
 
   .large-block-grid-2 > li:nth-of-type(n) {
@@ -855,7 +1116,7 @@ samp {
   .large-block-grid-2 > li:nth-of-type(2n+1) {
     clear: both; }
 
-  .large-block-grid-3 > li {
+  .large-block-grid-3 {
     width: 33.33333%; }
 
   .large-block-grid-3 > li:nth-of-type(n) {
@@ -864,7 +1125,7 @@ samp {
   .large-block-grid-3 > li:nth-of-type(3n+1) {
     clear: both; }
 
-  .large-block-grid-4 > li {
+  .large-block-grid-4 {
     width: 25%; }
 
   .large-block-grid-4 > li:nth-of-type(n) {
@@ -873,7 +1134,7 @@ samp {
   .large-block-grid-4 > li:nth-of-type(4n+1) {
     clear: both; }
 
-  .large-block-grid-5 > li {
+  .large-block-grid-5 {
     width: 20%; }
 
   .large-block-grid-5 > li:nth-of-type(n) {
@@ -882,7 +1143,7 @@ samp {
   .large-block-grid-5 > li:nth-of-type(5n+1) {
     clear: both; }
 
-  .large-block-grid-6 > li {
+  .large-block-grid-6 {
     width: 16.66667%; }
 
   .large-block-grid-6 > li:nth-of-type(n) {
@@ -891,7 +1152,7 @@ samp {
   .large-block-grid-6 > li:nth-of-type(6n+1) {
     clear: both; }
 
-  .large-block-grid-7 > li {
+  .large-block-grid-7 {
     width: 14.28571%; }
 
   .large-block-grid-7 > li:nth-of-type(n) {
@@ -900,7 +1161,7 @@ samp {
   .large-block-grid-7 > li:nth-of-type(7n+1) {
     clear: both; }
 
-  .large-block-grid-8 > li {
+  .large-block-grid-8 {
     width: 12.5%; }
 
   .large-block-grid-8 > li:nth-of-type(n) {
@@ -909,7 +1170,7 @@ samp {
   .large-block-grid-8 > li:nth-of-type(8n+1) {
     clear: both; }
 
-  .large-block-grid-9 > li {
+  .large-block-grid-9 {
     width: 11.11111%; }
 
   .large-block-grid-9 > li:nth-of-type(n) {
@@ -918,7 +1179,7 @@ samp {
   .large-block-grid-9 > li:nth-of-type(9n+1) {
     clear: both; }
 
-  .large-block-grid-10 > li {
+  .large-block-grid-10 {
     width: 10%; }
 
   .large-block-grid-10 > li:nth-of-type(n) {
@@ -927,7 +1188,7 @@ samp {
   .large-block-grid-10 > li:nth-of-type(10n+1) {
     clear: both; }
 
-  .large-block-grid-11 > li {
+  .large-block-grid-11 {
     width: 9.09091%; }
 
   .large-block-grid-11 > li:nth-of-type(n) {
@@ -936,7 +1197,7 @@ samp {
   .large-block-grid-11 > li:nth-of-type(11n+1) {
     clear: both; }
 
-  .large-block-grid-12 > li {
+  .large-block-grid-12 {
     width: 8.33333%; }
 
   .large-block-grid-12 > li:nth-of-type(n) {
