--- a/_/_css/_scss/style.scss
+++ b/_/_css/_scss/style.scss
@@ -6,6 +6,7 @@
 @import "_base/_reset.scss";
 @import "_base/_grid.scss";
 @import "_base/_typography.scss";
+@import "_base/_proto.scss"; // Uncomment this if you want basic styles for prototpying. 
 
 
 // VENDOR 
